crates/vize_atelier_vapor/tests/snapshots/vapor_custom_directive_parity__directive_element.snap
---
source: crates/vize_atelier_vapor/tests/vapor_custom_directive_parity.rs
expression: actual
---
[
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("A"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("A"),
                ],
                "tag": String("div"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("B"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("B"),
                ],
                "tag": String("div"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("B"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("C"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("C"),
                ],
                "tag": String("div"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("B"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("C"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("D"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("D"),
                ],
                "tag": String("div"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("B"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("C"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("D"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("E"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("E"),
                ],
                "tag": String("div"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("B"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("C"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("D"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("div"),
                "value": String("E"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("cleanup"),
                "tag": String("div"),
                "value": String("E"),
            },
        ],
        "tree": Array [],
    },
]
