crates/vize_atelier_vapor/tests/snapshots/vapor_custom_directive_parity__directive_element_code.snap
---
source: crates/vize_atelier_vapor/tests/vapor_custom_directive_parity.rs
expression: parent.code
---
import { resolveDirective as _resolveDirective, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, withVaporDirectives as _withVaporDirectives, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> </div>", true)

export function render(_ctx) {
  const _directive_focus = _resolveDirective("focus")
  const n0 = t0()
  const x0 = _txt(n0)
  _withVaporDirectives(n0, [[_directive_focus, () => (_ctx.value), () => ("top"), { "lazy": true }]])
  _renderEffect(() => _setText(x0, _toDisplayString(_ctx.value)))
  return n0
}
